Added reportingTopicPrefix parameter to EMSQueuesMonitoringPlugin Renamed parameter topicPrefix to monitoringTopicPrefix for EMSQueuesMonitoringPlugin Added suffix _SENSOR to topics used for reporting metrics to EMS (EMSQueuesMonitoringPlugin) Modified IoTPipelineConfigurator to automatically create persistent shared queues. Modified the test to validate it. Set all activemq related dependencies to `provided` so the generated JAR doesn't contain them.
Change-Id: I4576b2b0e875c5f13b99b3579b106382a16548a9